add java9+ specific jvm arg line only when building with the right jdk